--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -1,25 +1,28 @@
-.wrapper {    
-    overflow: hidden;
-    padding-left: 18px;
-    padding-right: 18px;
-    max-width: 1236px;
-    margin-left: auto;
-    margin-right: auto;
+.wrapper {
+  overflow: hidden;
+  padding-left: 18px;
+  padding-right: 18px;
+  max-width: 1236px;
+  margin-left: auto;
+  margin-right: auto;
 
-    &--medium {
-        max-width: 796px;
+  &--medium {
+    max-width: 976px;
+  }
+  &--no-padding-until-medium {
+    padding-left: 0;
+    padding-right: 0;
+    @mixin atMedium {
+      padding-left: 18px;
+      padding-right: 18px;
     }
+  }
 
-    .wrapper {
-        padding-left: 0;
-        padding-right: 0;
-    }
-
-    &--b-margin {
-        margin-bottom: 1rem;
-
-        @mixin atSmall {
-            margin-bottom: 4rem;
-        }
-    }
+  .wrapper {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  &--b-margin {
+    margin-bottom: 4rem;
+  }
 }
