--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -114,6 +114,7 @@
 
         @mixin atMedium {
             display: block;
+            opacity: 1;
             padding-top: 0;
             z-index: 1;
             transform: scale(1);
