--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -11,7 +11,12 @@
     }
 
     @mixin atMedium {
+        position: fixed;
         background-color: rgba($mainBlue, 0.3);
+
+        &--dark {
+             background-color: rgba(23,51,75, 0.8);
+        }
     }
 
     &__btn-container {
@@ -26,13 +31,19 @@
         top: 0;
         left: 50%;
         transform: translateX(-50%);
+        transform-origin: 50% 0;
+        transition: transform 0.3s ease-in-out;
         background-color: $mainBlue;
         padding: 14px 28px;
 
         @mixin atMedium {
             left: auto;
-            transform: translateX(0);
-            padding: 20px 30px;
+            transform: translateX(0);           
+            padding: 25px 35px;
+
+            .site-header--dark & {
+                transform: scale(0.55);
+            }
         }
 
     }
